# pmr_laboratorijske_vjezbe

./: .gitignore
broken_robot/: CMakeLists.txt  package.xml
broken_robot/config/: diff_drive.yaml
broken_robot/launch/: broken_robot.launch
broken_robot/urdf/: broken_robot.urdf
lab_bug/: CMakeLists.txt  package.xml
lab_bug/config/: lab_bug_params.yaml
lab_bug/launch/: lab_bug.launch  lab_bug_simulation.launch
lab_bug/rviz/: lab_bug.rviz
lab_bug/scripts/: bug.py
lab_diff_robot/: CMakeLists.txt  package.xml
lab_diff_robot/config/: lab_diff_drive.yaml
lab_diff_robot/launch/: spawn.launch
lab_diff_robot/urdf/: lab_diff_robot.urdf
lab_navigation_world/: CMakeLists.txt  package.xml
lab_navigation_world/launch/: lab_navigation_world.launch
lab_world/: CMakeLists.txt  package.xml
lab_world/launch/: lab_world.launch
lab_world/world/: lab.world
lokalizacija/: CMakeLists.txt  package.xml
lokalizacija/scripts/: putanje.py
navigacija/: CMakeLists.txt  package.xml
navigacija/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
navigacija/scripts/: trajanje.py
obstacle_detection/: CMakeLists.txt  package.xml
obstacle_detection/config/: obstacle_detection_params.yaml
obstacle_detection/launch/: obstacle_detection.launch  obstacle_detection_simulation.launch
obstacle_detection/msg/: Obstacles.msg
obstacle_detection/rviz/: obstacle_detection.rviz
obstacle_detection/scripts/: obstacle_detection_node.py
obstacle_following/: CMakeLists.txt  package.xml
obstacle_following/config/: obstacle_following_params.yaml
obstacle_following/launch/: obstacle_following.launch  obstacle_following_simulation.launch
obstacle_following/rviz/: obstacle_following.rviz
obstacle_following/scripts/: obstacle_following_node.py
obstacle_world/: CMakeLists.txt  package.xml
obstacle_world/launch/: obstacle_following_world.launch  obstacle_world.launch
obstacle_world/world/: obstacle.world  obstacle_following.world
