<?xml version="1.0"?>
<package format="2">
  <name>broken_robot</name>
  <version>1.0.0</version>
  <description>The broken robot package</description>

  <maintainer email="kresimir.turkovic@romb-technologies.hr">KresoJeZakon</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
