<?xml version="1.0"?>
<package format="2">
  <name>lab_bug</name>
  <version>1.0.0</version>
  <description>The lab bug package</description>

  <maintainer email="kresimir.turkovic@romb-technologies.hr">Kresimir Turkovic</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
