<?xml version="1.0"?>
<package format="2">
  <name>lab_diff_robot</name>
  <version>1.0.0</version>
  <description>The lab diff robot package</description>

  <maintainer email="kresimir.turkovic@romb-technologies.hr">Kresimir Turkovic</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
</package>
