<?xml version="1.0"?>
<package format="2">
  <name>lab_navigation_world</name>
  <version>1.0.0</version>
  <description>A Gazebo world for lab navigation assignments.</description>

  <maintainer email="damjan@romb-technologies.hr">damjan</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>lab_diff_robot</exec_depend>
</package>
