<?xml version="1.0"?>
<package format="2">
  <name>lokalizacija</name>
  <version>1.0.0</version>
  <description>The lokalizacija package</description>

  <maintainer email="damjan@romb-technologies.hr">Damjan Miklić</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>lab_diff_robot</exec_depend>
  <exec_depend>lab_navigation_world</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
