<?xml version="1.0"?>
<package format="2">
  <name>navigacija</name>
  <version>1.0.0</version>
  <description>Paket za autonomnu navigaciju</description>

  <maintainer email="damjan@romb-technologies.hr">Damjan Miklić</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lab_diff_robot</exec_depend>
  <exec_depend>lab_navigation_world</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
