<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>1.0.0</version>
  <description>The obstacle detection package</description>

  <maintainer email="kresimir.turkovic@romb-technologies.hr">Kresimir Turkovic</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>obstacle_world</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>  
</package>
