<?xml version="1.0"?>
<package format="2">
  <name>obstacle_following</name>
  <version>1.0.0</version>
  <description>The obstacle following package</description>

  <maintainer email="kresimir.turkovic@romb-technologies.hr">Kresimir Turkovic</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>obstacle_detection</depend>
  <depend>obstacle_world</depend>
</package>
